<resources>
    <string name="app_name" translatable="false">Samrat</string>
    <string name="pos" translatable="false">Cashier</string>
    <string name="kot" translatable="false">Kitchen</string>
    <string name="wot" translatable="false">Waiter</string>
    <string name="tag_line">King of foods</string>
    <string name="logo">logo</string>
    <string name="close_msg">Are you sure to exit the app</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="finger_print">Finger Print</string>
    <string name="do_not_show_again">Do not show again  </string>
    <string name="select_department">Please select your department</string>
    <string name="mobile_hint">Mobile number</string>
    <string name="login_pin">Login PIN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="department">department</string>
    <string name="default_value">0</string>
    <string name="table_no_header">Table No -</string>
    <string name="selected">Selected</string>
    <string name="show_only_booked">Only Booked  </string>
    <string name="try_demo">Try a demo</string>
    <string name="free_table">Free Table</string>
    <string name="table_no">Table No</string>
    <string name="orders">Orders</string>
    <string name="progress">Progress</string>
    <string name="delivered">Delivered</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
