<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="onClickListeners"
            type="android.view.View.OnClickListener"/>
    </data>

    <!--Ui root tag-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SplashActivity">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_16"
            android:textStyle="bold"
            android:id="@+id/tvSelectDepartment"
            android:text="@string/select_department"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSelectDepartment"
            >

            <Button
                android:id="@+id/btnPos"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="368dp"
                android:layout_height="159dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="@{onClickListeners::onClick}"
                android:text="@string/pos"
                android:textSize="@dimen/t_size_18"
                app:layout_constraintBottom_toTopOf="@+id/btnKot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnKot"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="368dp"
                android:layout_height="160dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:onClick="@{onClickListeners::onClick}"
                android:text="@string/kot"
                android:textSize="@dimen/t_size_18"
                app:layout_constraintBottom_toTopOf="@+id/btnWot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnPos" />

            <Button
                android:id="@+id/btnWot"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="368dp"
                android:layout_height="160dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:onClick="@{onClickListeners::onClick}"
                android:text="@string/wot"
                android:textSize="@dimen/t_size_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnKot" />
        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>

</layout>
